* 0ddc5b7 2015-06-27 | Added task to implement reading application variables from .srcmod configuration file (HEAD, development) [Kostya Zolotarov]
* b557bd1 2015-06-26 | Added application configuration file (origin/development, origin/HEAD) [Kostya Zolotarov]
* 3d24eb7 2015-06-23 | Added description; Added README chapter sequences task [Kostya Zolotarov]
* ff4d0a4 2015-06-23 | Added FEATURES template [Kostya Zolotarov]
* f1c4ab4 2015-06-19 | Included version command in the install [Kostya Zolotarov]
* b3bb4f4 2015-06-19 | Implemented incremental versioning [Kostya Zolotarov]
* 8b32115 2015-06-19 | Added version command file [Kostya Zolotarov]
* 07de32f 2015-06-19 | Enabled library files uninstall [Kostya Zolotarov]
* 8d3f5d1 2015-06-19 | Added readme command [Kostya Zolotarov]
* f9d7393 2015-06-19 | Applied logging library to setup and tasks commands [Kostya Zolotarov]
* 5e5308a 2015-06-19 | Added logging library [Kostya Zolotarov]
* 789da07 2015-06-19 | Added templates library [Kostya Zolotarov]
* 6829f68 2015-06-18 | Added setup command [Kostya Zolotarov]
* 06617ba 2015-06-15 | Working version of tasks command [Kostya Zolotarov]
* cae9914 2015-06-14 | Half-finished version of tasks command (i'm tired and its late) [Kostya Zolotarov]
* a2c2637 2015-05-23 | Fixed package name [Kostya Zolotarov]
* 5f969a6 2015-05-23 | Added build to instal/uninstall scripts [Kostya Zolotarov]
* 1451071 2015-05-23 | Activated build script [Kostya Zolotarov]
* adfcaad 2015-05-23 | Added TODO parsing [Kostya Zolotarov]
* 505ea37 2015-05-23 | Added build and tasks scripts; Added license to all the scripts [Kostya Zolotarov]
* 298826f 2015-05-23 | Created uninstall script [Kostya Zolotarov]
* 1fbe78c 2015-05-20 | Added cpp template [Kostya Zolotarov]
* e723f9a 2015-05-20 | Added branching model description [Kostya Zolotarov]
* 0bfdfdd 2015-05-20 | Added license [Kostya Zolotarov]
* 1d99bf7 2015-05-20 | Aliased 'git commit' [Kostya Zolotarov]