@@ -2,7 +2,7 @@ application_name="srcmod"
 application_path=$HOME
 application_executables_directory="Programs"
 application_libraries_directory="Programs"
-application_settings_directory=""
+application_settings_directory=
 application_logs_directory="Logs"
 application_executable_files=(
     setup
@@ -21,4 +21,22 @@ application_library_files=(
 application_setting_files=(
     settings.srcmod
 )
-
+source_module_templates=(
+    AUTHORS
+    BACKGROUND
+    BUILD
+    CHANGELOG
+    DEFECTS
+    DEPENDENCIES
+    DESCRIPTION
+    DESIGN
+    FEATURES
+    FILES
+    INSTALL
+    LICENSE
+    REQUIREMENTS
+    SOURCES
+    TASKS
+    TEST
+    VERSION
+)
