@@ -1,5 +1,6 @@
-* 0ddc5b7 2015-06-27 | Added task to implement reading application variables from .srcmod configuration file (HEAD, development) [Kostya Zolotarov]
-* b557bd1 2015-06-26 | Added application configuration file (origin/development, origin/HEAD) [Kostya Zolotarov]
+* beb9eee 2015-06-29 | Install optimizations (HEAD, origin/development, origin/HEAD, development) [Kostya Zolotarov]
+* 0ddc5b7 2015-06-27 | Added task to implement reading application variables from .srcmod configuration file [Kostya Zolotarov]
+* b557bd1 2015-06-26 | Added application configuration file [Kostya Zolotarov]
 * 3d24eb7 2015-06-23 | Added description; Added README chapter sequences task [Kostya Zolotarov]
 * ff4d0a4 2015-06-23 | Added FEATURES template [Kostya Zolotarov]
 * f1c4ab4 2015-06-19 | Included version command in the install [Kostya Zolotarov]
